5.0/_sources/masktools.rst.txt
.. |CustomMask| replace:: :class:`~hydpy.core.masktools.CustomMask`
.. |DefaultMask| replace:: :class:`~hydpy.core.masktools.DefaultMask`
.. |False| replace:: :const:`False`
.. |IndexMask.refindices| replace:: :const:`~hydpy.core.masktools.IndexMask.refindices`
.. |IndexMask| replace:: :class:`~hydpy.core.masktools.IndexMask`
.. |Masks| replace:: :class:`~hydpy.core.masktools.Masks`
.. |ModelSequence| replace:: :class:`~hydpy.core.sequencetools.ModelSequence`
.. |NodeMasks| replace:: :class:`~hydpy.core.masktools.NodeMasks`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |Sequence_| replace:: :class:`~hydpy.core.sequencetools.Sequence_`
.. |SubParameters| replace:: :class:`~hydpy.core.parametertools.SubParameters`
.. |SubSequences| replace:: :class:`~hydpy.core.sequencetools.SubSequences`
.. |True| replace:: :const:`True`
.. |Variable| replace:: :class:`~hydpy.core.variabletools.Variable`
.. |bool| replace:: :class:`bool`
.. |hland| replace:: :mod:`~hydpy.models.hland`
.. |list| replace:: :class:`list`
.. |property| replace:: :class:`property`
.. |hland_masks.Complete| replace:: :class:`~hydpy.models.hland.hland_masks.Complete`
.. |hland_masks.Soil| replace:: :class:`~hydpy.models.hland.hland_masks.Soil`
.. |hland_parameters.ParameterComplete| replace:: :class:`~hydpy.models.hland.hland_parameters.ParameterComplete`
.. |hland_parameters.ParameterSoil| replace:: :class:`~hydpy.models.hland.hland_parameters.ParameterSoil`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`

.. _masktools:

masktools
=========

.. automodule:: hydpy.core.masktools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
